fix: created the city controller to isolate the city functions
